012 ==> 449406 - Photograph Properties incorrect after saving in image editor.
013 ==> 451660 - digiKam Import Main View - <Ctrl-W>, <Ctr-Esc> and Menu entry "Close" do not close the Window.
014 ==> 451697 - Why does digikam do anything to Thumbnails if tags are changed?
015 ==> 451628 - digiKam hangs on startup.
016 ==> 451545 - Strange tagging after building a new database.
017 ==> 451347 - Missing Rating info in XMP sidecar, for RAW files.
018 ==> 450785 - Image version hiding not working.
019 ==> 451723 - Reread metadata from image stalls when started from Tag Manager.
020 ==> 451291 - Insuffiecient privileges "ALTER TABLE" crashes digikam.
021 ==> 451786 - Zero sized images on failed move.
022 ==> 451785 - Map view freezing.
023 ==> 451637 - Crash while extra->maintenance.
024 ==> 386522 - Video decoder backend in digiKam (windows 10).
025 ==> 418266 - Animated .gif files flicker while looping.
026 ==> 451933 - No access to folders with Flatpak.
027 ==> 451934 - Cannot move picture to trash.
028 ==> 451943 - digiKam crashes on *.svg file that contains a font that's not installed on the system.
029 ==> 451924 - digiKam-7.7.0-20220325T121458-Win64.tar.xz crash on start.
030 ==> 452008 - Timestamp not updated when using File name timestamp.
031 ==> 452103 - Custom keyboard shortcut definitions not persistent.
032 ==> 452323 - digiKam crash after importing photos.
033 ==> 452321 - digiKam Album date after migration from Picasa3.
034 ==> 122738 - Exiv2 needed to compile.
035 ==> 451868 - Crash while creating quality.
036 ==> 452578 - Cannot set correct image folder when configure.
037 ==> 452712 - Appimage for 7.6.0 will not run in Ubuntu 18.04.
038 ==> 452677 - The date is passed to iNaturalist in the wrong format.
039 ==> 452947 - From Batch Queue Manager metadata for lens auto-correction are not recognized.
040 ==> 452577 - Export to Pinterest function does not work and shows a message status:failure,code:11.
041 ==> 